[package]
name = "rkv"
version = "0.1.0"
edition = "2021"
description = "RKV: A high-performance, replicated key-value store built in Rust. Features Raft consensus, WAL persistence, and gRPC networking."
repository = "https://github.com/mhdsdt/rkv"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10"
prost = "0.14"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.10"
